refactor: apply refactor flags